# atelie-catalog-api

./: .env.example  Dockerfile  README.md  catalog.db  compose.yaml  entrypoint.sh  pyproject.toml
app/: main.py
app/api/routes/: auth_test.py  product.py  store.py
app/core/: config.py  database.py  security.py
app/models/: product.py  store.py
app/schemas/: product.py  store.py
migrations/: env.py
migrations/versions/: 9c91d71eda29_create_product_models.py  b0a27656cb57_create_address_table.py  ce8a5eef17ab_initial_migration.py
tests/: conftest.py  test_main.py  test_product.py  test_store.py
